criaçao de migrations, implementaçao de tsyring, refatoraçao
