# src/modules/cars/entities/Specification.ts
@@ -1,11 +1,18 @@
+import {Column, Entity,CreateDateColumn, PrimaryColumn} from "typeorm"
 import {v4 as uuidv4} from 'uuid'
 
-
+@Entity("specifications")
 class Specification{
-
+    @PrimaryColumn()
     id?:string;
+    
+    @Column()
     name: string;
-    descripton: string;
+
+    @Column()
+    description: string;
+
+    @CreateDateColumn()
     created_at: Date;
 
 
