# src/swagger.json
@@ -1,7 +1,7 @@
 {
     "openapi": "3.0.0",
     "info":{
-        "title":"RentalX Documentation",
+        "title":"Rentx Documentation",
         "description":"desenvolvida para fins de estudo",
         "version": "1.0.0",
         "contact": {
@@ -35,7 +35,7 @@
                         }
                     }
                 },
-                "response": {
+                "responses": {
                     "201": {
                         "description":"Created"
                     },
@@ -72,7 +72,74 @@
                     }
                 }
             }
+        },
+        "/categories/import":{
+            "post":{
+                "tags":["Category"],
+                "sumary":"Upload a new category",
+                "description":"Upload a new category",
+                "requestBody":{
+                    "content":{
+                        "multipart/form-data":{
+                            "schema":{
+                                "type":"object",
+                                "properties":{
+                                    "file":{
+                                        "type":"string",
+                                        "format":"binary"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    }
+                   
+                }
+
+            }
+        },
+        "/specifications":{
+            "post":{
+                "tags":["Specifications"],
+                "sumary":"Create a specification",
+                "description":"criando novas especificações",
+                "requestBody":{
+                    "content":{
+                        "application/json":{
+                            "schema":{
+                                "$ref":"#/definitions/Specifications"
+                            }
+                        }
+                    }
+                },
+                "responses":{
+                    "201":{
+                        "description":"Created"
+                    },
+                    "500":{
+                        "description":"Specification already exists"
+                    }
+                }
+            }
+        }
+    },
+    "definitions":{
+        "Specifications":{
+            "type":"object",
+            "properties":{
+                "name":{
+                    "type":"string"
+                },
+                "description":{
+                    "type":"string"
+                }
+            }
         }
     }
+
 
 }
